--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-[![Ask DeepWiki](https://deepwiki.com/badge.svg)](https://deepwiki.com/DiegoNar-1970/CanchaDeportiva)
+
+<a href="https://deepwiki.com/DiegoNar-1970/CanchaDeportiva"><img src="https://deepwiki.com/badge.svg" alt="Ask DeepWiki"></a>
