--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-<a href="https://deepwiki.com/DiegoNar-1970/CanchaDeportiva"><img src="https://deepwiki.com/badge.svg" alt="Ask DeepWiki"></a>
+Documentacion : https://deepwiki.com/DiegoNar-1970/CanchaDeportiva/5-development-guide
